--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
 </head>
 
 <body>
-<header>Header</header>
+<header>
+    <a href="index.html">
+        <h1 id="logo">"Lover running"</h1>
+    </a>
+    <nav>
+        <ul>
+            <li>
+                <a href="">Home</a>
+            </li>
+            <li>
+                <a href="">Gallery</a>
+            </li>
+            <li>
+                <a href="">Sign up</a>
+            </li>
+        </ul>
+    </nav>
+</header>
 <main> Main </main>
 <footer>Footer</footer>
 </body>
